Profile link fix
Added target attribute to profile link in profiles bar

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="bar-title">Profiles</div>
             <div class="connector"></div>
             <div class="bar-contents">
-                <a href="https://www.github.com/devsiva003/" title="Github profile"><i class="fab fa-github"></i></a>
+                <a href="https://www.github.com/devsiva003/" target="_blank" title="Github profile"><i class="fab fa-github"></i></a>
                 <!-- <a href="#" title="Mail address"><i class="fab fa-google"></i></a> -->
             </div>
         </div>
