Anchor tag link fix & meta modifications

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Siva - Portfolio</title>
+    <title>Siva - Web Dev Portfolio</title>
     <link rel="canonical" content="https://devsiva003.github.io" />
-    <meta property="description" content="Siva - Web Devloper" />
-    <meta property="og:title" content="Siva - Portfolio" />
-    <meta property="og:description" content="Siva - Web Devloper" />
+    <meta property="description" content="This is my portfolio site which showcase my projects" />
+    <meta property="og:title" content="Siva - Web Dev Portfolio" />
+    <meta property="og:description" content="This is my portfolio site which showcase my projects" />
     <meta property="og:url" content="https://devsiva003.github.io" />
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
@@ -114,8 +114,8 @@
                         </div>
                         <div class="card-title">Currency Converter App</div>
                         <div class="card-links">
-                            <a href="https://www.github.com/devsiva003/devsiva003.github.io/currency-converter/"><i class="fas fa-code"></i>View Source</a>
                             <a href="./currency-converter/index.html" target="_blank"><i class="fas fa-eye"></i>View Project</a>
+                            <a href="https://www.github.com/devsiva003/devsiva003.github.io/tree/main/currency-converter/" target="_blank"><i class="fas fa-code"></i>View Source</a>
                         </div>
                     </div>
                 </div>
