Added Animations, modified meta & more - Repositioned main menu in mobile - Added Animations - Renamed Images - Added & modified some meta tags

--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Siva - Web Dev Portfolio</title>
-    <link rel="canonical" content="https://devsiva003.github.io" />
+    <!-- HTML meta -->
     <meta property="description" content="This is my portfolio site which showcase my projects" />
+    <meta name="robots" content="index, follow" />
+    <!-- Open Graph Meta -->
     <meta property="og:title" content="Siva - Web Dev Portfolio" />
     <meta property="og:description" content="This is my portfolio site which showcase my projects" />
-    <meta property="og:url" content="https://devsiva003.github.io" />
+    <meta property="og:url" content="https://devsiva003.github.io/" />
+    <!-- Twitter Meta -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Siva - Web Dev Portfolio" />
+    <meta name="twitter:description" content="This is my portfolio site which showcase my projects" />
+    <meta name="twitter:domain" content="https://devsiva003.github.io/" />
+    <!-- ./ -->
+    <link rel="canonical" content="https://devsiva003.github.io/" />
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
     <link rel="preconnect" href="https://cdnjs.cloudflare.com/" />
+    <!-- stylesheets -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="stylesheet" href="./main.css" />
@@ -119,6 +130,22 @@
                         </div>
                     </div>
                 </div>
+                <div class="card-item">
+                   <div class="card-top">
+                       <img src="./images/currency-converter.png" alt="Currency Converter App" style="transform:scale(1.5)" class="card-img">
+                       <span class="card-tag-primary">Javascript</span>
+                    </div>
+                    <div class="card-bottom">
+                        <div class="card-tags">
+                            <span>API</span>
+                        </div>
+                        <div class="card-title">Currency Converter App</div>
+                        <div class="card-links">
+                            <a href="./currency-converter/index.html" target="_blank"><i class="fas fa-eye"></i>View Project</a>
+                            <a href="https://www.github.com/devsiva003/devsiva003.github.io/tree/main/currency-converter/" target="_blank"><i class="fas fa-code"></i>View Source</a>
+                        </div>
+                    </div>
+                </div>
                 <!-- <div class="card-item">
                    <div class="card-top">
                        <img src="./images/4136918.jpg" alt="Project name" class="card-img">
@@ -147,7 +174,7 @@
                 <ul>
                     <li>
                         <i class="fas fa-arrow-right"></i>
-                        <a href="mailto:javascript:;">conact@gmail.com</a>
+                        <a href="mailto:javascript:;">MAIL_ID</a>
                     </li>
                 </ul>
             </div> -->
@@ -176,5 +203,8 @@
         </div>
     </div>
     <script src="./main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js" integrity="sha512-Mf/xUqfWvDIr+1B6zfnIDIiG7XHzyP/guXUWgV6PgaQoIFeXkJQR5XWh9fqAiCiRCpemabt3naV4jhDWVnuYDQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/ScrollTrigger.min.js" integrity="sha512-YzMW3OzvgtVpIIPPpjnCy8wVTq5slHRrxnLH1oD5dkVjZf8+8DJYd+GYmmWXZNmroTqKXFFzFS3XZ/LBvaNgZg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./lib/animations.js"></script>
 </body>
 </html>
