--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="user-avatar"></div>
             </div>
             <p class="user-greetings"><span class="hi-emoji">👋</span> Hi, I'm <span class="user-name">Siva</strong></p>
-            <p class="user-roles">I'm a <span id="rolePlaceholder">Web Devloper</span></p>
+            <p class="user-roles">I'm a <span id="rolePlaceholder">Web Developer</span></p>
         </section>
         <section class="sec langs-known" id="skills">
             <div class="sec-title"><h2>Languages &amp; Skills</h2></div>
