Projects & Contact Details Updated Added Some Animations

--- a/index.html
+++ b/index.html
@@ -130,6 +130,23 @@
                         </div>
                     </div>
                 </div>
+                <div class="card-item">
+                   <div class="card-top">
+                       <img src="./images/random-string-generator.png" alt="Random String Generator" style="transform:scale(1.5)" class="card-img">
+                       <span class="card-tag-primary">Javascript</span>
+                    </div>
+                    <div class="card-bottom">
+                        <div class="card-tags">
+                            <span>Clipboard</span>
+                            <span>Keyboard Shortcut</span>
+                        </div>
+                        <div class="card-title">Random String Generator</div>
+                        <div class="card-links">
+                            <a href="./random-string-generator/index.html" target="_blank"><i class="fas fa-eye"></i>View Project</a>
+                            <a href="https://www.github.com/devsiva003/devsiva003.github.io/tree/main/random-string-generator/" target="_blank"><i class="fas fa-code"></i>View Source</a>
+                        </div>
+                    </div>
+                </div>
                 <!-- <div class="card-item">
                    <div class="card-top">
                        <img src="./images/4136918.jpg" alt="Project name" class="card-img">
@@ -153,15 +170,15 @@
     </main>
     <footer id="footer">
         <div class="footer-div">
-            <!-- <div class="left-div">
+            <div class="left-div">
                 <h4>Contact Me</h4>
                 <ul>
                     <li>
                         <i class="fas fa-arrow-right"></i>
-                        <a href="mailto:javascript:;">MAIL_ID</a>
+                        <a href="mailto:devsiva003@gmail.com">devsiva003@gmail.com</a>
                     </li>
                 </ul>
-            </div> -->
+            </div>
             <div class="right-div">
                 <h4>Profiles</h4>
                 <ul>
