Added Resume Page Link

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#career">Career</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="./resume/index.html">Resume</a></li>
             </ul>
             <a id="main-menu-trigger" href="javascript:;"><i class="fas fa-bars"></i></a>
         </nav>
