Added new project

--- a/index.html
+++ b/index.html
@@ -148,6 +148,26 @@
                         </div>
                     </div>
                 </div>
+                <div class="card-item">
+                   <div class="card-top">
+                       <img src="./images/todos-hub.png" alt="Project name" class="card-img">
+                       <span class="card-tag-primary">MERN</span>
+                    </div>
+                    <div class="card-bottom">
+                        <div class="card-tags">
+                            <span>react</span>
+                            <span>router</span>
+                            <span>MongoDB</span>
+                            <span>Express</span>
+                            <span>JWT</span>
+                        </div>
+                        <div class="card-title">TodosHub</div>
+                        <div class="card-links">
+                            <a href="https://www.github.com/devsiva003/todosHub/tree/main/" target="_blank"><i class="fas fa-code"></i>View Source</a>
+                            <a href="https://todoshub.onrender.com" target="_blank"><i class="fas fa-eye"></i>View Project</a>
+                        </div>
+                    </div>
+                </div>
                 <!-- <div class="card-item">
                    <div class="card-top">
                        <img src="./images/4136918.jpg" alt="Project name" class="card-img">
