Optimized images & fix meta typo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Siva - Web Dev Portfolio</title>
     <!-- HTML meta -->
-    <meta property="description" content="This is my portfolio site which showcase my projects" />
+    <meta name="description" content="This is my portfolio site which showcase my projects" />
     <meta name="robots" content="index, follow" />
     <!-- Open Graph Meta -->
     <meta property="og:title" content="Siva - Web Dev Portfolio" />
@@ -23,6 +23,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
     <link rel="preconnect" href="https://cdnjs.cloudflare.com/" />
+    <link rel="preload" as="image" href="./images/hero-cover.jpg">
     <!-- stylesheets -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
@@ -40,7 +41,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="./resume/index.html">Resume</a></li>
             </ul>
-            <a id="main-menu-trigger" href="javascript:;"><i class="fas fa-bars"></i></a>
+            <a id="main-menu-trigger" href="javascript:;" aria-label="main menu"><i class="fas fa-bars"></i></a>
         </nav>
     </header>
     <main>
@@ -117,7 +118,7 @@
             <div class="cards-wrap">
                 <div class="card-item">
                    <div class="card-top">
-                       <img src="./images/currency-converter.png" alt="Currency Converter App" style="transform:scale(1.5)" class="card-img">
+                       <img src="./images/currency-converter.png" alt="Currency Converter App" class="card-img">
                        <span class="card-tag-primary">Javascript</span>
                     </div>
                     <div class="card-bottom">
@@ -133,7 +134,7 @@
                 </div>
                 <div class="card-item">
                    <div class="card-top">
-                       <img src="./images/random-string-generator.png" alt="Random String Generator" style="transform:scale(1.5)" class="card-img">
+                       <img src="./images/random-string-generator.png" alt="Random String Generator" class="card-img">
                        <span class="card-tag-primary">Javascript</span>
                     </div>
                     <div class="card-bottom">
@@ -150,8 +151,8 @@
                 </div>
                 <div class="card-item">
                    <div class="card-top">
-                       <img src="./images/todos-hub.png" alt="Project name" class="card-img">
-                       <span class="card-tag-primary">MERN</span>
+                       <img src="./images/todos-hub.png" alt="TodosHub" class="card-img">
+                       <span class="card-tag-primary">MERN Stack</span>
                     </div>
                     <div class="card-bottom">
                         <div class="card-tags">
@@ -192,7 +193,7 @@
     <footer id="footer">
         <div class="footer-div">
             <div class="left-div">
-                <h4>Contact Me</h4>
+                <h3>Contact Me</h3>
                 <ul>
                     <li>
                         <i class="fas fa-arrow-right"></i>
@@ -201,7 +202,7 @@
                 </ul>
             </div>
             <div class="right-div">
-                <h4>Profiles</h4>
+                <h3>Profiles</h3>
                 <ul>
                     <li>
                         <i class="fas fa-arrow-right"></i>
@@ -213,13 +214,13 @@
         <div class="footer-credit">Created with 💖 by Siva</div>
     </footer>
     <div class="utils">
-        <a href="#" id="backToTopBtn"><i class="fas fa-arrow-up"></i></a>
+        <a href="#" id="backToTopBtn" aria-label="back to top"><i class="fas fa-arrow-up"></i></a>
         <div class="scroll-indicator"></div>
         <div id="floatingProfilesBar" class="floating-profiles-bar">
             <div class="bar-title">Profiles</div>
             <div class="connector"></div>
             <div class="bar-contents">
-                <a href="https://www.github.com/devsiva003/" target="_blank" title="Github profile"><i class="fab fa-github"></i></a>
+                <a href="https://www.github.com/devsiva003/" target="_blank" title="Github profile" aria-label="Github profile"><i class="fab fa-github"></i></a>
                 <!-- <a href="#" title="Mail address"><i class="fab fa-google"></i></a> -->
             </div>
         </div>
