Updated profiles & resume page

--- a/index.html
+++ b/index.html
@@ -208,6 +208,10 @@
                         <i class="fas fa-arrow-right"></i>
                         <a href="https://www.github.com/devsiva003/" target="_blank"><i class="fab fa-github"></i>&nbsp;Github</a>
                     </li>
+                    <li>
+                        <i class="fas fa-arrow-right"></i>
+                        <a href="https://www.github.com/devsiva003/" target="_blank"><i class="fab fa-linkedin"></i>&nbsp;LinkedIn</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -221,7 +225,8 @@
             <div class="connector"></div>
             <div class="bar-contents">
                 <a href="https://www.github.com/devsiva003/" target="_blank" title="Github profile" aria-label="Github profile"><i class="fab fa-github"></i></a>
-                <!-- <a href="#" title="Mail address"><i class="fab fa-google"></i></a> -->
+                <a href="https://www.linkedin.com/in/devsiva003/" target="_blank" title="LinkedIn profile" aria-label="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
+                <a href="mailto:devsiva003@gmail.com" target="_blank" title="Gmail id" aria-label="Gmail id"><i class="fab fa-google"></i></a>
             </div>
         </div>
     </div>
