--- a/resume/index.html
+++ b/resume/index.html
@@ -5,6 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume | Siva - Web Developer</title>
+    <!-- HTML meta -->
+    <meta name="description" content="check out & download my latest resume" />
+    <meta name="robots" content="noindex, nofollow" />
+    <!-- Open Graph Meta -->
+    <meta property="og:title" content="Resume | Siva - Web Developer" />
+    <meta property="og:description" content="check out & download my latest resume" />
+    <meta property="og:url" content="https://devsiva003.github.io/" />
+    <!-- Twitter Meta -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Resume | Siva - Web Developer" />
+    <meta name="twitter:description" content="check out & download my latest resume" />
+    <meta name="twitter:domain" content="https://devsiva003.github.io/" />
+    <!-- ./ -->
+    <link rel="canonical" content="https://devsiva003.github.io/" />
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
     <link rel="preconnect" href="https://cdnjs.cloudflare.com/" />
@@ -89,7 +103,7 @@
     <footer id="footer">
         <div class="footer-div">
             <div class="left-div">
-                <h4>Contact Me</h4>
+                <h3>Contact Me</h3>
                 <ul>
                     <li>
                         <i class="fas fa-arrow-right"></i>
@@ -98,11 +112,15 @@
                 </ul>
             </div>
             <div class="right-div">
-                <h4>Profiles</h4>
+                <h3>Profiles</h3>
                 <ul>
                     <li>
                         <i class="fas fa-arrow-right"></i>
                         <a href="https://www.github.com/devsiva003/" target="_blank"><i class="fab fa-github"></i>&nbsp;Github</a>
+                    </li>
+                    <li>
+                        <i class="fas fa-arrow-right"></i>
+                        <a href="https://www.github.com/devsiva003/" target="_blank"><i class="fab fa-linkedin"></i>&nbsp;LinkedIn</a>
                     </li>
                 </ul>
             </div>
