Resume page: position fixes & links updated

--- a/resume/index.html
+++ b/resume/index.html
@@ -64,7 +64,7 @@
         }
         .embed-wrapper #downloadLink {
             position: absolute;
-            top: 10px;
+            top: 12px;
             right: 10px;
             background-color: #09f;
             color: #fff;
@@ -95,9 +95,9 @@
     <main>
         <div class="embed-wrapper">
             <!-- <iframe src="./Siva - Web Developer - Resume - Latest.pdf" frameborder="0" loading="lazy">Loading...</iframe> -->
-            <iframe src="https://docs.google.com/viewer?url=https://devsiva003.github.io/resume/Siva%20-%20Web%20Developer%20-%20Resume%20-%20Latest.pdf&embedded=true" frameborder="0" loading="lazy">Loading...</iframe>
+            <iframe src="https://drive.google.com/file/d/1QZ4nkkmzXKuIk9uqqwK1dMYi_x6JDwAi/preview" frameborder="0" loading="lazy">Loading...</iframe>
             <div id="embed-shield"></div>
-            <a href="./Siva - Web Developer - Resume - Latest.pdf" class="link" id="downloadLink" download=""><i class="fas fa-download"></i>&nbsp;Download Resume</a>
+            <a href="https://drive.google.com/uc?id=1QZ4nkkmzXKuIk9uqqwK1dMYi_x6JDwAi&export=download" class="link" id="downloadLink" download=""><i class="fas fa-download"></i></a>
         </div>
     </main>
     <footer id="footer">
