Added new project & CSS fix

--- a/index.html
+++ b/index.html
@@ -117,9 +117,50 @@
             </div>
             <div class="cards-wrap">
                 <div class="card-item">
+                    <div class="card-top">
+                        <img src="./images/clg-web-app.png" alt="College Web App [ERP]" class="card-img">
+                        <span class="card-tag-primary">MERN Stack</span>
+                    </div>
+                    <div class="card-bottom">
+                        <div class="card-tags">
+                            <span>react</span>
+                            <span>tailwind</span>
+                            <span>redux</span>
+                            <span>rtk query</span>
+                            <span>MongoDB</span>
+                            <span>JWT</span>
+                        </div>
+                        <div class="card-title">College Web App (College Management App)<br><small>[under development]</small></div>
+                        <div class="card-links">
+                            <a href="https://clg-web-app.onrender.com" target="_blank"><i class="fas fa-eye"></i>View Project</a>
+                            <!-- <a href="https://www.github.com/devsiva003/#####/tree/main/" target="_blank"><i class="fas fa-code"></i>View Source</a> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="card-item">
                    <div class="card-top">
-                       <img src="./images/currency-converter.png" alt="Currency Converter App" class="card-img">
-                       <span class="card-tag-primary">Javascript</span>
+                       <img src="./images/todos-hub.png" alt="TodosHub" class="card-img">
+                       <span class="card-tag-primary">MERN Stack</span>
+                    </div>
+                    <div class="card-bottom">
+                        <div class="card-tags">
+                            <span>react</span>
+                            <span>router</span>
+                            <span>MongoDB</span>
+                            <span>Express</span>
+                            <span>JWT</span>
+                        </div>
+                        <div class="card-title">TodosHub</div>
+                        <div class="card-links">
+                            <a href="https://todoshub.onrender.com" target="_blank"><i class="fas fa-eye"></i>View Project</a>
+                            <a href="https://www.github.com/devsiva003/todosHub/tree/main/" target="_blank"><i class="fas fa-code"></i>View Source</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-item">
+                    <div class="card-top">
+                        <img src="./images/currency-converter.png" alt="Currency Converter App" class="card-img">
+                        <span class="card-tag-primary">Javascript</span>
                     </div>
                     <div class="card-bottom">
                         <div class="card-tags">
@@ -146,26 +187,6 @@
                         <div class="card-links">
                             <a href="./random-string-generator/index.html" target="_blank"><i class="fas fa-eye"></i>View Project</a>
                             <a href="https://www.github.com/devsiva003/devsiva003.github.io/tree/main/random-string-generator/" target="_blank"><i class="fas fa-code"></i>View Source</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-item">
-                   <div class="card-top">
-                       <img src="./images/todos-hub.png" alt="TodosHub" class="card-img">
-                       <span class="card-tag-primary">MERN Stack</span>
-                    </div>
-                    <div class="card-bottom">
-                        <div class="card-tags">
-                            <span>react</span>
-                            <span>router</span>
-                            <span>MongoDB</span>
-                            <span>Express</span>
-                            <span>JWT</span>
-                        </div>
-                        <div class="card-title">TodosHub</div>
-                        <div class="card-links">
-                            <a href="https://www.github.com/devsiva003/todosHub/tree/main/" target="_blank"><i class="fas fa-code"></i>View Source</a>
-                            <a href="https://todoshub.onrender.com" target="_blank"><i class="fas fa-eye"></i>View Project</a>
                         </div>
                     </div>
                 </div>
